--- a/licensing-service/pom.xml
+++ b/licensing-service/pom.xml
@@ -34,8 +34,8 @@
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <start-class>io.namelos.licenses.Application</start-class>
-        <docker.image.name>namelos/tmx-licensing-service</docker.image.name>
-        <docker.image.tag>chapter2</docker.image.tag>
+        <docker.image.name>namelos/licensing-service</docker.image.name>
+        <docker.image.tag>2</docker.image.tag>
     </properties>
 
     <build>
