--- a/docker/common/docker-compose.yml
+++ b/docker/common/docker-compose.yml
@@ -1,5 +1,9 @@
 version: '2'
 services:
+  eurekaserver:
+    image: namelos/eurekasvr:4
+    ports:
+      - "8761:8761"
   configserver:
     image: namelos/confsvr:3
     ports:
