--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>licensing-service</module>
         <module>confsvr</module>
         <module>eurekasvr</module>
+        <module>organization-service</module>
     </modules>
 
     <build>
